<resources>
    <string name="app_name">MFRF</string>
    <string name="actualizar">Actualizar</string>
    <string name="altaProspectos">alta prospectos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name ="bienvenido">Bienvenido</string>
    <string name="calle1">Calle 1</string>
    <string name="calle2">Calle 2</string>
    <string name="celular">Celular</string>
    <string name="Clave_compra">Clave de compra</string>
    <string name="consultar">consultar</string>
    <string name="consultarProspectos">consulta de prospectos</string>
    <string name="contraseña">contraseña</string>
    <string name="Estatus">Estatus</string>
    <string name= "id_prospecto">No de Prospecto</string>
    <string name = "iniciar">iniciar sesion</string>
    <string name= "cve_prospecto">Clave del prospecto</string>
    <string name="RFC">RFC</string>
    <string name="tel_casa">Telefono de casa</string>
    <string name="tel_ofic">Telefono de oficina</string>
    <string name="No_int">No. interior</string>
    <string name="No_ext">No. exterior</string>
    <string name="Entre_Calles">Entre calles</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="modificar">modificar</string>
    <string name="no_de_col">No. de colonia</string>
    <string name="no_de_loc">No de localidad</string>
    <string name="no_de_cd">No. de ciudad</string>
    <string name="no_de_mun">No. de municipio</string>
    <string name="no_de_est">No. de estado</string>
    <string name="no_de_pais">No. de país</string>
    <string name="no_de_vend">No. de vendedor</string>
    <string name="cve_vend">Clave de vendedor</string>
    <string name="fecha_actual">Fecha actual</string>
    <string name="usr_act_reg">Usuario actual</string>
    <string name="txtNom">Nombre</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtApellidoP">Apellido Paterno</string>
    <string name="txtApellidoM">Apellido Materno</string>
    <string name="herramientas">herramientas</string>
    <string name="usuario">Usuario</string>
</resources>
