<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.servlet.RegistroMainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="484dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/cve_compra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Clave_compra"
                android:inputType="number" />

            <EditText
                android:id="@+id/estatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Estatus"
                android:inputType="number" />

            <EditText
                android:id="@+id/id_prospecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/id_prospecto"
                android:inputType="number" />

            <EditText
                android:id="@+id/cve_prospecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cve_prospecto"
                android:inputType="text" />

            <EditText
                android:id="@+id/nombre_prospecto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtNom"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/prospecto_paterno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtApellidoP"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/prospecto_materno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtApellidoM"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/prospecto_rfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/RFC"
                android:inputType="text" />

            <EditText
                android:id="@+id/tel_casa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel_casa"
                android:inputType="phone" />

            <EditText
                android:id="@+id/tel_ofic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tel_ofic"
                android:inputType="phone" />

            <EditText
                android:id="@+id/celular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="phone" />

            <EditText
                android:id="@+id/calle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/calle1"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/calle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/calle2"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/no_interior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/No_int"
                android:inputType="number" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/no_exterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/No_ext"
                android:inputType="number" />

            <EditText
                android:id="@+id/entre_calles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Entre_Calles"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/cod_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/codigo_postal"
                android:inputType="text" />

            <EditText
                android:id="@+id/corr_elec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/colonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_col"
                android:inputType="number" />

            <EditText
                android:id="@+id/localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_loc"
                android:inputType="number" />

            <EditText
                android:id="@+id/ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_cd"
                android:inputType="number" />

            <EditText
                android:id="@+id/municipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_mun"
                android:inputType="number" />

            <EditText
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_est"
                android:inputType="number" />

            <EditText
                android:id="@+id/pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_pais"
                android:inputType="number" />

            <EditText
                android:id="@+id/id_vendedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/no_de_vend"
                android:inputType="number" />

            <EditText
                android:id="@+id/clave_vendedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cve_vend"
                android:inputType="text" />

            <EditText
                android:id="@+id/fecha_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha_actual"
                android:inputType="date" />

            <EditText
                android:id="@+id/usuario_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/usr_act_reg"
                android:inputType="text" />

            <Button
                android:id="@+id/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enviar"
                tools:ignore="HardcodedText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualizar"
                android:id="@+id/actualizar" />

        </LinearLayout>

    </ScrollView>

</TableLayout>
