<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".menu">

    <ImageButton
        android:onClick="abrir_fichas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_marginTop="157dp"
        android:src="@drawable/gestion"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="42dp"
        android:contentDescription="@string/altaProspectos" />

    <ImageButton
        android:onClick="abrir_consultas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/prospectos"
        android:layout_alignTop="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:contentDescription="@string/consultarProspectos"/>

    <ImageButton
        android:onClick="abrir_herramientas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton3"
        android:layout_below="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton"
        android:src="@drawable/mantenimiento"
        android:contentDescription="@string/herramientas"/>

</RelativeLayout>
